unpackaged/main/default/objects/Opportunity/fields/Apartment_Type__c.field-meta.xml
<CustomField>
    <fullName>Apartment_Type__c</fullName>
    <label>Apartment Type</label>
    <type>TextArea</type>
</CustomField>