unpackaged/main/default/objects/Opportunity/fields/Average_Budget__c.field-meta.xml
<CustomField>
    <fullName>Average_Budget__c</fullName>
    <label>Average Budget</label>
    <length>255</length>
    <type>Text</type>
</CustomField>