unpackaged/main/default/objects/Opportunity/fields/Average_Length_of_Stay__c.field-meta.xml
<CustomField>
    <fullName>Average_Length_of_Stay__c</fullName>
    <label>Average Length of Stay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>