unpackaged/main/default/objects/Opportunity/fields/Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre__c</fullName>
    <formula>TEXT ( Account.Cost_Centre__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Centre</label>
    <type>Text</type>
</CustomField>