unpackaged/main/default/objects/Opportunity/fields/Current_Enquiry_Note__c.field-meta.xml
<CustomField>
    <fullName>Current_Enquiry_Note__c</fullName>
    <label>Current Enquiry Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>