unpackaged/main/default/objects/Opportunity/fields/Date_Time_Enquiry_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Enquiry_Created__c</fullName>
    <label>Date/Time Enquiry Created</label>
    <type>DateTime</type>
</CustomField>