unpackaged/main/default/objects/Opportunity/fields/Enquiries_and_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_and_Bookings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiries and Bookings</label>
    <referenceTo>Enquiries_and_Bookings__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>