unpackaged/main/default/objects/Opportunity/fields/Enquiry_Check_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Check_Out_Date__c</fullName>
    <label>Enquiry Check Out Date</label>
    <type>Date</type>
</CustomField>