unpackaged/main/default/objects/Opportunity/fields/Enquiry_Is_It_A_Live_Booking__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Is_It_A_Live_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enquiry - Is It A Live Booking?</label>
    <type>Checkbox</type>
</CustomField>