unpackaged/main/default/objects/Opportunity/fields/Enquiry_Net_Rate__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Net_Rate__c</fullName>
    <label>Enquiry Net Rate</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>