unpackaged/main/default/objects/Opportunity/fields/Enquiry_Number_of_Nights__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Number_of_Nights__c</fullName>
    <label>Enquiry Number of Nights</label>
    <length>255</length>
    <type>Text</type>
</CustomField>