unpackaged/main/default/objects/Opportunity/fields/Enquiry_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Owner_Name__c</fullName>
    <label>Enquiry Owner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>