unpackaged/main/default/objects/Opportunity/fields/Is_There_a_Note_Within_1_Month__c.field-meta.xml
<CustomField>
    <fullName>Is_There_a_Note_Within_1_Month__c</fullName>
    <formula>If(NOW() - Date_of_Last_Note__c &lt;= 31, &quot;Within Date&quot;, &quot;Out of Date&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is There a Note Within 1 Month</label>
    <type>Text</type>
</CustomField>