unpackaged/main/default/objects/Opportunity/fields/Length_of_Stay__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Stay__c</fullName>
    <label>Length of Stay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>