unpackaged/main/default/objects/Opportunity/fields/Missing_or_Wrong_Information__c.field-meta.xml
<CustomField>
    <fullName>Missing_or_Wrong_Information__c</fullName>
    <formula>IF(OR( Sales_Channel__c =  &quot;&quot;,   Amount = 0,   NOW() - Date_of_Last_Note__c &gt;= 31,  CloseDate - TODAY() &lt;0), &quot;Missing Information&quot;, &quot;Correct&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Missing or Wrong Information</label>
    <type>Text</type>
</CustomField>