unpackaged/main/default/objects/Opportunity/fields/Owner_Pardot__c.field-meta.xml
<CustomField>
    <fullName>Owner_Pardot__c</fullName>
    <formula>OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Pardot</label>
    <type>Text</type>
</CustomField>