unpackaged/main/default/objects/Opportunity/fields/Pardot_Comments__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Comments__c</fullName>
    <label>Pardot Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>