unpackaged/main/default/objects/Opportunity/fields/Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel__c</fullName>
    <formula>TEXT(Account.Sales_Channel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Channel</label>
    <type>Text</type>
</CustomField>