unpackaged/main/default/objects/Opportunity/fields/Where_Do_They_Book__c.field-meta.xml
<CustomField>
    <fullName>Where_Do_They_Book__c</fullName>
    <label>Where Do They Book</label>
    <length>255</length>
    <type>Text</type>
</CustomField>