unpackaged/main/default/objects/Opportunity/fields/Who_Books_Accommodation__c.field-meta.xml
<CustomField>
    <fullName>Who_Books_Accommodation__c</fullName>
    <label>Who Books Accommodation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>