unpackaged/main/default/objects/Opportunity/listViews/Ainsley_Oppurtunities.listView-meta.xml
<ListView>
    <fullName>Ainsley_Oppurtunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Ford</value>
    </filters>
    <label>Ainsley Oppurtunities</label>
</ListView>