unpackaged/main/default/objects/Opportunity/listViews/BD.listView-meta.xml
<ListView>
    <fullName>BD</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>contains</operation>
        <value>Jacob,Ainsley,Ben,Yolanda,Hannah,Jennifer</value>
    </filters>
    <label>BD Pipeline</label>
</ListView>