unpackaged/main/default/objects/Opportunity/listViews/Direct_Corporate_Opportunities.listView-meta.xml
<ListView>
    <fullName>Direct_Corporate_Opportunities</fullName>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Date_of_Last_Note__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Loss_Reason__c</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>Current_Notes__c</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Initial Contact,Qualification / Needs Analysis,Proposal / Pricing,Negotiation / Review,Closing / Contract,Closed Parked</value>
    </filters>
    <filters>
        <field>CORE.USERS.FULL_NAME</field>
        <operation>equals</operation>
        <value>Hannah Trigg,Roberto Alessandrelli,Tech Team</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>notContain</operation>
        <value>Yolanda</value>
    </filters>
    <label>Direct Corporate Opportunities</label>
</ListView>