unpackaged/main/default/objects/Opportunity/listViews/Hannah_Working_List_2023.listView-meta.xml
<ListView>
    <fullName>Hannah_Working_List_2023</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>equals</operation>
        <value>htrig</value>
    </filters>
    <label>Hannah Working List 2023</label>
    <sharedTo>
        <role>Hubspot_Integration</role>
    </sharedTo>
</ListView>